# nudger

./: Dockerfile  README.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  nudge.rs
backend/src/filters/: aave.rs  collector.rs  memes.rs  mod.rs  zksync.rs
frontend/: next.config.mjs  package-lock.json  package.json  wagmi.config.ts
frontend/public/.well-known/: walletconnect.txt
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/advertisers/: page.tsx
frontend/src/app/publishers/: page.tsx
frontend/src/app/what-is-this/: page.tsx
frontend/src/components/: Banner.tsx  SelectDemo.tsx  Swap.tsx
frontend/src/components/nav/: Footer.tsx  Navbar.tsx
frontend/src/components/nudges/: HoverCard.tsx  NavbarNudge.tsx  Toast.tsx  ToastNudge.tsx
frontend/src/components/ui/: sonner.tsx
frontend/src/components/wallet/: ConnectWallet.tsx
frontend/src/lib/: api.ts
frontend/src/store/: DemoStore.ts
