[package]
name = "nudger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1.0"}
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-futures = "0.2.5"
reqwest = { version = "0.12.4", features = ["json"] }
ethers = "2.0.14"
tower = "0.4.13"
http-body-util = "0.1.2"
axum-test = "15.3.0"
futures = "0.3.30"
